<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/sky"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/sky"
        android:src="@drawable/sky" />

    <ImageView
        android:id="@+id/ice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/ice"
        android:src="@drawable/ice"
        app:srcCompat="@drawable/ice" />

    <ImageView
        android:id="@+id/fog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/fog"
        android:src="@drawable/fog"
        app:srcCompat="@drawable/fog" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/start"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/actionBarItemBackground"
            android:text="@string/game"
            android:visibility="visible" />

        <Button
            android:id="@+id/scores"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/actionBarItemBackground"
            android:text="@string/scores"
            android:visibility="visible" />

        <Button
            android:id="@+id/help"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/actionBarItemBackground"
            android:text="@string/help"
            android:visibility="visible" />

        <Button
            android:id="@+id/about"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/actionBarItemBackground"
            android:text="@string/about"
            android:visibility="visible" />

        <Button
            android:id="@+id/exit"
            style="@style/ExitFont"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/actionBarItemBackground"
            android:elevation="0dp"
            android:text="@string/exit"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/sound"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/ic_lock_silent_mode_off" />

</RelativeLayout>